syntax = "proto3";

option csharp_namespace = "InteractReef.Grpc.Users";

import "google/protobuf/empty.proto";
import "Protos/Base.proto";

message GetUserRequest{
	string email = 1;
	string password = 2;
}

message UserInfoModel{
	int32 id = 1;
	string email = 2;
	string password = 3;
}

service AuthUsersService{
	rpc TryAddUser(UserInfoModel) returns (GrpcResponce);
	rpc GetUser(GetUserRequest) returns (GrpcResponce);
}